# opencv_utils

./: CMakeLists.txt  README.md  cvutils.cpp  cvutils.h  main.cpp  main.h
